; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_asn1_string_set_uint64.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_asn1_string_set_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i32)* @asn1_string_set_uint64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asn1_string_set_uint64(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [4 x i8], align 1
  %8 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = getelementptr inbounds [4 x i8], [4 x i8]* %7, i64 0, i64 0
  %13 = load i32, i32* %5, align 4
  %14 = call i64 @asn1_put_uint64(i8* %12, i32 %13)
  store i64 %14, i64* %8, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %16 = getelementptr inbounds [4 x i8], [4 x i8]* %7, i64 0, i64 0
  %17 = load i64, i64* %8, align 8
  %18 = getelementptr inbounds i8, i8* %16, i64 %17
  %19 = load i64, i64* %8, align 8
  %20 = sub i64 4, %19
  %21 = trunc i64 %20 to i32
  %22 = call i32 @ASN1_STRING_set(%struct.TYPE_4__* %15, i8* %18, i32 %21)
  ret i32 %22
}

declare dso_local i64 @asn1_put_uint64(i8*, i32) #1

declare dso_local i32 @ASN1_STRING_set(%struct.TYPE_4__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
